Update phone mockup UI and add package.json
Refined the phone mockup in index.html and styles.css for a more generic QWERTY design, removing BlackBerry branding and improving visual details. Added package.json with live-server for local development. Updated .gitignore for Node.js and environment files.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@ Thumbs.db
 
 # Temporary files
 *.tmp
+
+# Node.js
+node_modules/
+npm-debug.log*
+package-lock.json
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
